script file completed. Calculator works as inteded. I added operation text to display the operator you are using. May mess with the css a bit to make it less static.

--- a/styles.css
+++ b/styles.css
@@ -65,10 +65,23 @@ body {
     text-align: end;
 }
 
+.topSection {
+    display: flex;
+    justify-content: space-between;
+}
+
 .topButtons {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
+}
+
+#operationText {
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #clear {
@@ -111,4 +124,10 @@ body {
     height: 96px;
 
     font-size: 30px;
+}
+
+#decimal {
+    border: 2px solid rgb(70, 70, 70);
+    background-color: rgb(8, 8, 8);
+    color: white;
 }
