--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
 
     box-sizing: border-box;
     width: 100%;
-    height: auto;
+    height: 100%;
     padding-right: 5px;
     
     overflow-x: auto;
